# ohboi-backend

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  coverage.sh  dev.Dockerfile  diesel.toml  docker-compose.yml  run.sh  scratch_1.txt  scratch_2.txt  scratch_3.txt
.cargo/: config.toml
cache/: proxies  user_agents
lib/: Cargo.toml
lib/src/: lib.rs  local_sentry.rs  my_enum.rs  schema.rs
lib/src/db/: mod.rs
lib/src/db/characteristic/: entity.rs
lib/src/db/entity/: characteristic.rs  exchange_rate.rs  mod.rs
lib/src/db/exchange_rate/: entity.rs  mod.rs  repository.rs
lib/src/db/exchange_rate/operation/: create.rs  get.rs  mod.rs
lib/src/db/product_characteristic/: characteristic_id.rs  mod.rs  repository.rs
lib/src/db/product_characteristic/product_characteristic_enum_value/: repository.rs
lib/src/db/product_characteristic/product_characteristic_float_value/: mod.rs  repository.rs
lib/src/db/product_characteristic/product_characteristic_string_value/: repository.rs
lib/src/db/repository/: exchange_rate.rs
lib/src/db/source_product_price_history/: entity.rs  mod.rs
lib/src/db/source_product_price_history/operation/: create.rs  get.rs
lib/src/dto/: mod.rs
lib/src/dto/characteristic/: enum_characteristic.rs  float_characteristic.rs  int_characteristic.rs  mod.rs  string_characteristic.rs
lib/src/dto/product_characteristic/: mod.rs
lib/src/error_reporting/: breadcrumb.rs  init.rs  mod.rs  report.rs
lib/src/service/: currency_converter.rs
lib/src/util/: all_characteristics.rs  characteristic_id.rs
src/daemon/: Cargo.toml  mod.rs  settings.rs
src/daemon/crawler/: crawler.rs  mi_shop_com.rs  mod.rs  samsung_shop_com_ua.rs
src/daemon/crawler/util/: bool_value_parser.rs  enum_value_parser.rs  float_value_parser.rs  int_value_parser.rs  mod.rs
src/daemon/db/entity/: source.rs  source_product.rs  source_product_price_history.rs  user.rs  user_registration.rs
src/daemon/db/entity/characteristic/: characteristic.rs  product_characteristic.rs  product_characteristic_bool_value.rs  product_characteristic_enum_value.rs  product_characteristic_float_value.rs
src/daemon/db/repository/: category.rs  exchange_rate.rs  product.rs  source.rs  source_product.rs  source_product_price_history.rs
src/daemon/db/repository/characteristic/: characteristic.rs  characteristic_sync.rs  mod.rs  product_characteristic.rs  product_characteristic_enum_value.rs  product_characteristic_float_value.rs  product_characteristic_string_value.rs
src/daemon/dto/: parsed_product.rs
src/daemon/parse/: mod.rs
src/daemon/parse/crawler/: crawler.rs  mi_shop_com.rs  mod.rs  samsung_shop_com_ua.rs
src/daemon/parse/crawler/characteristic_parser/: bool_value_parser.rs  enum_value_parser.rs  float_value_parser.rs  int_value_parser.rs  mod.rs  string_value_parser.rs
src/daemon/parse/crawler/mi_shop_com/crawler/: characteristics.rs  media_format.rs  media_format_parser.rs  mod.rs
src/daemon/parse/layer/: save.rs
src/daemon/parse/pub_api/: mod.rs  parse_category.rs  parse_category_page.rs  parse_details.rs
src/daemon/parse/util/: dedup.rs  mod.rs
src/daemon/queue/consumer/: parse_category.rs  parse_details.rs  parse_image.rs  parse_page.rs  pull_exchange_rates.rs
src/daemon/queue/layer/: consume.rs  declare.rs  produce.rs
src/daemon/queue/producer/: parse_category.rs  pull_exchange_rates.rs
src/daemon/queue/pub_api/: declare.rs  launch.rs  mod.rs  postpone.rs
src/daemon/service/cloud/: layer.rs  pub_api.rs
src/daemon/service/html_cleaner/: mod.rs
src/daemon/service/request/: layer.rs  pub_api.rs
src/daemon/src/: local_sentry.rs  main.rs
src/daemon/src/db/entity/characteristic/: characteristic.rs  product_characteristic.rs
src/daemon/src/db/repository/: source_product.rs
src/daemon/src/db/repository/characteristic/: characteristic.rs  characteristic_sync.rs  product_characteristic_enum_value.rs  product_characteristic_float_value.rs  product_characteristic_string_value.rs
src/daemon/src/dto/: mod.rs
src/daemon/src/parse/crawler/: crawler.rs  samsung_shop_com_ua.rs
src/daemon/src/parse/pub_api/: parse_category.rs  parse_category_page.rs  parse_details.rs
src/daemon/src/parse/util/: dedup.rs  mod.rs
src/daemon/src/queue/consumer/: parse_category.rs  parse_details.rs  parse_image.rs  parse_page.rs  pull_exchange_rates.rs
src/daemon/src/queue/layer/: consume.rs  declare.rs  produce.rs
src/daemon/src/queue/producer/: mod.rs
src/daemon/src/queue/pub_api/: postpone.rs
src/daemon/src/service/: mod.rs
src/daemon/src/service/cloud/: layer.rs  pub_api.rs
src/daemon/src/service/html_cleaner/: mod.rs
src/daemon/src/service/request/: pub_api.rs
src/http/: Cargo.toml  category.rs  characteristic.rs  mod.rs  product.rs  source.rs  source_product.rs  user.rs
src/http/auth/: google.rs  mod.rs
src/http/controller/: category.rs  mod.rs  source_product.rs  user.rs
src/http/db/: mod.rs
src/http/db/category/: repository.rs
src/http/db/entity/: mod.rs  source_product_price_history.rs
src/http/db/product/: entity.rs  repository.rs
src/http/db/product_characteristic/: characteristic_id.rs  entity.rs  mod.rs  product_characteristic_enum_value.rs  product_characteristic_float_value.rs  product_characteristic_string_value.rs  repository.rs
src/http/db/repository/: category.rs  mod.rs  product.rs  source.rs  source_product.rs  user.rs  user_registration.rs
src/http/db/source/: entity.rs  repository.rs
src/http/db/source_product/: entity.rs  repository.rs
src/http/db/user/: entity.rs  repository.rs
src/http/db/user_registration/: entity.rs  repository.rs
src/http/dto/: product.rs
src/http/src/: main.rs
src/http/src/auth/: google.rs
src/http/src/db/category/: repository.rs
src/http/src/db/product/: repository.rs
src/http/src/db/product_characteristic/: product_characteristic_float_value.rs
src/http/src/db/user_registration/: entity.rs
src/http/src/dto/: product.rs
src/http/src/endpoint/: category.rs  source.rs  source_product.rs  user.rs
src/http/util/: product.rs
(+290 files in other folders)
