[package]
name = "lib"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "chrono", "numeric", "r2d2"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
chrono = "0.4.19"
bigdecimal = { version = "0.1.2", features = ["serde"] }
r2d2 = "0.8.9" # connection pool
lazy_static = "1.4.0"
dotenv = "0.15.0"
#util
strum = { version = "0.21", features = ["derive"] } # enum iterators
strum_macros = "0.21"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"