[package]
name = "http"
version = "0.1.0"
authors = ["e33 <vitaliy.svinchyak@gmail.com>"]
edition = "2018"

# TODO update actix-web & google-jwt-verify(switch to oauth2-rs) when they will add support of tokio v1+
[dependencies]
# http
actix-web = { version = "3.3.2", features = ["compress"] }
actix-web-httpauth = "0.5.0"
actix-web-validator = { git = "https://github.com/Vitaliy-Svinchyak/actix-web-validator", branch = "custom-message-fix" }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"] }
sentry-actix = "0.22.0"
serde_json = "1.0"
google-jwt-verify = { version = "0.3.0", features = ["async"] }
# db
diesel = { version = "1.4.7", features = ["postgres", "chrono", "numeric", "r2d2"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
chrono = "0.4.19"
bigdecimal = { version = "0.1.2", features = ["serde"] }
# util
dotenv = "0.15.0"
termion = "1.5.5" # terminal colors etc
sentry = { version = "0.22.0", features = ["debug-images"] }
log = "0.4.13"
env_logger = "0.8.2" # configuration for logger via env
maplit = "1.0.2" # btreemap macros
rand = "0.8.3"
strum = { version = "0.21", features = ["derive"] } # enum iterators
strum_macros = "0.21"

[dependencies.lib]
version = "0.0.0"
path = "../../lib"
